Use system llvm and openblas

--- a/package.yml
+++ b/package.yml
@@ -13,12 +13,19 @@ builddeps  :
     - pkgconfig(libgit2)
     - pkgconfig(libssh2)
     - pkgconfig(libunwind)
+    - llvm-devel
     - openblas-devel
     - suitesparse-devel
 patterns   :
     - docs: [/usr/share/doc]
 build      : |
+    #Based off Gentoo patch
+    %patch -p1 < $pkgfiles/julia-fix-llvm-linking.patch
     %make release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+        LIBBLASNAME=libopenblas \
+        LIBLAPACKNAME=libopenblas \
+        USE_LLVM_SHLIB=1 \
+        USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
         USE_SYSTEM_FFTW=1 \
         USE_SYSTEM_GMP=1 \
@@ -26,10 +33,15 @@ build      : |
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
         USE_SYSTEM_LIBUNWIND=1 \
+        USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_SUITESPARSE=1
 install    : |
     %make_install release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+        LIBBLASNAME=libopenblas \
+        LIBLAPACKNAME=libopenblas \
+        USE_LLVM_SHLIB=1 \
+        USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
         USE_SYSTEM_FFTW=1 \
         USE_SYSTEM_GMP=1 \
@@ -37,8 +49,8 @@ install    : |
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
         USE_SYSTEM_LIBUNWIND=1 \
+        USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
-        USE_SYSTEM_OPENSPECFUN=1 \
         USE_SYSTEM_SUITESPARSE=1
     # Empty folder
     rm -rf $installdir/usr/libexec
