Initial inclusion of Julia in the repo.

--- a/package.yml
+++ b/package.yml
@@ -16,6 +16,8 @@ builddeps  :
     - llvm-devel
     - openblas-devel
     - suitesparse-devel
+rundeps    :
+    - suitesparse
 patterns   :
     - docs: [/usr/share/doc]
 build      : |
