--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : julia
 version    : 0.6.0_rc2
-release    : 5
+release    : 6
 source     :
     - git|https://github.com/JuliaLang/julia.git : v0.6.0-rc2
 license    : MIT
@@ -14,6 +14,8 @@ builddeps  :
     - pkgconfig(libgit2)
     - pkgconfig(libssh2)
     - pkgconfig(libunwind)
+    - pkgconfig(libpcre2-8)
+    - arpack-devel
     - llvm-devel
     - openblas-devel
     - suitesparse-devel
@@ -30,6 +32,7 @@ build      : |
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
+        USE_SYSTEM_ARPACK=1 \
         USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
         USE_SYSTEM_FFTW=1 \
@@ -40,6 +43,7 @@ build      : |
         USE_SYSTEM_LIBUNWIND=1 \
         USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
+        USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
         CC=clang CXX=clang++ \
 install    : |
@@ -47,6 +51,7 @@ install    : |
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
+        USE_SYSTEM_ARPACK=1 \
         USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
         USE_SYSTEM_FFTW=1 \
@@ -57,6 +62,7 @@ install    : |
         USE_SYSTEM_LIBUNWIND=1 \
         USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
+        USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
         CC=clang CXX=clang++
     # Empty folder
