--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : julia
 version    : 0.6.0_rc2
-release    : 6
+release    : 7
 source     :
     - git|https://github.com/JuliaLang/julia.git : v0.6.0-rc2
 license    : MIT
@@ -21,7 +21,9 @@ builddeps  :
     - suitesparse-devel
 clang      : yes
 rundeps    :
+    - arpack
     - libgit2
+    - pcre2
     - suitesparse
 patterns   :
     - docs : [/usr/share/doc]
