Update to newer snapshot to fix building julia packages
This also removes using the system LLVM, which are usually unable to build the
latest stable release. In future, julia will stick to the main branch.

Resolves T5568

Signed-off-by: Peter O'Connor <peter@solus-project.com>

--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : julia
 version    : 0.7.0
-release    : 10
+release    : 11
 source     :
-    - git|https://github.com/JuliaLang/julia.git : 1216e5f60cd2b23e29856b5227399ab0f3abef76
+    - git|https://github.com/JuliaLang/julia.git : dcc39f4d8d45c5fd1ee5ca477af6ad3c23ff01d4
 license    : MIT
 component  : programming
 summary    : The Julia Language - A fresh approach to technical computing.
@@ -15,7 +15,6 @@ builddeps  :
     - pkgconfig(libunwind)
     - pkgconfig(libpcre2-8)
     - arpack-devel
-    - llvm-devel
     - openblas-devel
     - suitesparse-devel
 clang      : yes
@@ -28,6 +27,7 @@ patterns   :
     - docs : [/usr/share/doc]
 networking : yes
 build      : |
+    sed -i /libcurl,CURL/d base/Makefile
     %make release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
@@ -40,8 +40,6 @@ build      : |
         USE_SYSTEM_LAPACK=1 \
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
-        USE_SYSTEM_LIBUNWIND=1 \
-        USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
@@ -59,8 +57,6 @@ install    : |
         USE_SYSTEM_LAPACK=1 \
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
-        USE_SYSTEM_LIBUNWIND=1 \
-        USE_SYSTEM_LLVM=1 \
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
