Update to 1.0. Release blog available [here](https://julialang.org/blog/2018/08/one-point-zero). Resolves T6814.

--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : julia
-version    : 0.7.0
-release    : 11
+version    : 1.0
+release    : 12
 source     :
-    - git|https://github.com/JuliaLang/julia.git : dcc39f4d8d45c5fd1ee5ca477af6ad3c23ff01d4
+    - git|https://github.com/JuliaLang/julia.git : v1.0.0
 license    : MIT
 component  : programming
 summary    : The Julia Language - A fresh approach to technical computing.
