Set to -j1 to see if the build server appreciates that.

--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : julia
 version    : 1.0
-release    : 12
+release    : 13
 source     :
     - git|https://github.com/JuliaLang/julia.git : v1.0.0
 license    : MIT
@@ -28,7 +28,7 @@ patterns   :
 networking : yes
 build      : |
     sed -i /libcurl,CURL/d base/Makefile
-    %make release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+    %make -j1 release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
@@ -45,7 +45,7 @@ build      : |
         USE_SYSTEM_SUITESPARSE=1 \
         CC=clang CXX=clang++
 install    : |
-    %make_install release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+    %make_install -j1 release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
