Update julia to 1.1.0
Summary:
Update to 1.1.0
Release notes can be found [here](https://github.com/JuliaLang/julia/blob/v1.1.0/NEWS.md).

Test Plan: Ran the examples on [this page](https://juliabyexample.helpmanual.io/).

Reviewers: #triage_team, JoshStrobl

Reviewed By: #triage_team, JoshStrobl

Subscribers: JoshStrobl

Maniphest Tasks: T6814

Differential Revision: https://dev.getsol.us/D5910

--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : julia
-version    : 1.0
-release    : 14
+version    : 1.1.0
+release    : 15
 source     :
-    - git|https://github.com/JuliaLang/julia.git : v1.0.0
+    - git|https://github.com/JuliaLang/julia.git : v1.1.0
 license    : MIT
 component  : programming
 summary    : The Julia Language - A fresh approach to technical computing.
@@ -28,7 +28,7 @@ patterns   :
 networking : yes
 build      : |
     sed -i /libcurl,CURL/d base/Makefile
-    %make -j1 release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+    %make release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
@@ -45,7 +45,7 @@ build      : |
         USE_SYSTEM_SUITESPARSE=1 \
         CC=clang CXX=clang++
 install    : |
-    %make_install -j1 release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+    %make_install release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_LLVM_SHLIB=1 \
