Update julia to 1.1.1
Summary:
Update julia to 1.1.1
Changelog can be found [here](https://github.com/JuliaLang/julia/releases/tag/v1.1.1).

Test Plan: Followed the examples on [this page](https://juliabyexample.helpmanual.io/).

Reviewers: #triage_team, JoshStrobl

Reviewed By: #triage_team, JoshStrobl

Subscribers: JoshStrobl

Differential Revision: https://dev.getsol.us/D6479

--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : julia
-version    : 1.1.0
-release    : 15
+version    : 1.1.1
+release    : 16
 source     :
-    - git|https://github.com/JuliaLang/julia.git : v1.1.0
+    - git|https://github.com/JuliaLang/julia.git : v1.1.1
 license    : MIT
 component  : programming
 summary    : The Julia Language - A fresh approach to technical computing.
@@ -60,8 +60,6 @@ install    : |
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
-        CC=clang CXX=clang++ -j1
-    # Empty folder
-    rm -rf $installdir/usr/libexec
+        CC=clang CXX=clang++
     echo '/usr/lib/julia' > julia.conf
     install -Dm00644 julia.conf $installdir/usr/share/ld.so.conf.d/julia.conf
