--- a/package.yml
+++ b/package.yml
@@ -1,13 +1,13 @@
 name       : julia
-version    : 1.2.0
-release    : 18
+version    : 1.4.1
+release    : 19
 source     :
-    - git|https://github.com/JuliaLang/julia.git : v1.2.0
+    - git|https://github.com/JuliaLang/julia.git : v1.4.1
 license    : MIT
 component  : programming
 summary    : The Julia Language - A fresh approach to technical computing.
 description: |
-    The Julia Language - A fresh approach to technical computing.
+    Julia provides ease and expressiveness for high-level numerical computing, in the same way as languages such as R, MATLAB, and Python, but also supports general programming.
 builddeps  :
     - pkgconfig(fftw3)
     - pkgconfig(libgit2)
@@ -17,7 +17,6 @@ builddeps  :
     - arpack-devel
     - openblas-devel
     - suitesparse-devel
-clang      : yes
 rundeps    :
     - arpack
     - libgit2
@@ -31,7 +30,6 @@ build      : |
     %make release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
-        USE_LLVM_SHLIB=1 \
         USE_SYSTEM_ARPACK=1 \
         USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
@@ -40,15 +38,15 @@ build      : |
         USE_SYSTEM_LAPACK=1 \
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
+        USE_SYSTEM_LLVM=0 \
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
-        CC=clang CXX=clang++
+        USE_SYSTEM_ZLIB=1
 install    : |
     %make_install release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
-        USE_LLVM_SHLIB=1 \
         USE_SYSTEM_ARPACK=1 \
         USE_SYSTEM_BLAS=1 \
         USE_SYSTEM_CURL=1 \
@@ -57,9 +55,10 @@ install    : |
         USE_SYSTEM_LAPACK=1 \
         USE_SYSTEM_LIBGIT2=1 \
         USE_SYSTEM_LIBSSH2=1 \
+        USE_SYSTEM_LLVM=0 \
         USE_SYSTEM_MPFR=1 \
         USE_SYSTEM_PCRE=1 \
         USE_SYSTEM_SUITESPARSE=1 \
-        CC=clang CXX=clang++
+        USE_SYSTEM_ZLIB=1
     echo '/usr/lib/julia' > julia.conf
     install -Dm00644 julia.conf $installdir/usr/share/ld.so.conf.d/julia.conf
