--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : julia
 version    : 1.4.1
-release    : 19
+release    : 20
 source     :
     - git|https://github.com/JuliaLang/julia.git : v1.4.1
 license    : MIT
@@ -44,7 +44,8 @@ build      : |
         USE_SYSTEM_SUITESPARSE=1 \
         USE_SYSTEM_ZLIB=1
 install    : |
-    %make_install release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
+    # Avoid having the installation choke on too many parallel jobs
+    %make_install -j1 release prefix=/usr sysconfdir=/etc MARCH=x86-64 \
         LIBBLASNAME=libopenblas \
         LIBLAPACKNAME=libopenblas \
         USE_SYSTEM_ARPACK=1 \
